--- a/mandelbulber2/formula/ui/transf_add_norm.ui
+++ b/mandelbulber2/formula/ui/transf_add_norm.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>transf_add_norm</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
